tests/snapshots/test_e2e__cli_fixtures_list_full.snap
---
source: tests/test_e2e.rs
expression: normalized
---
Fixtures tree for: <TEST_PROJECT_PATH>

api/
├── conftest.py (3 fixtures)
│   ├── api_client (used 2 times)
│   ├── api_token (used 2 times)
│   └── mock_response (used 1 time)
└── test_endpoints.py (1 fixtures)
    └── local_fixture (used 1 time)
conftest.py (7 fixtures)
├── another_fixture (used 5 times)
├── cli_runner (used 3 times)
├── database (used 3 times)
├── generator_fixture (used 1 time)
├── iterator_fixture (unused)
├── sample_fixture (used 9 times)
└── shared_resource (used 7 times)
database/
└── conftest.py (3 fixtures)
    ├── db_connection (used 2 times)
    ├── db_cursor (used 2 times)
    └── transaction (used 1 time)
imported_fixtures/
└── conftest.py (1 fixtures)
    └── local_fixture (used 1 time)
integration/
└── test_scopes.py (2 fixtures)
    ├── module_fixture (used 1 time)
    └── session_fixture (used 1 time)
subdir/
└── conftest.py (4 fixtures)
    ├── cli_runner (used 4 times)
    ├── database (used 3 times)
    ├── local_fixture (used 4 times)
    └── sample_fixture (used 2 times)
test_class_based.py (2 fixtures)
├── another_fixture (used 2 times)
└── shared_fixture (used 4 times)
test_isolated_scope.py (1 fixtures)
└── isolated_fixture (used 1 time)
test_renamed_fixtures.py (3 fixtures)
├── normal_fixture (used 1 time)
├── renamed_db (used 3 times)
└── user (used 1 time)
utils/
└── conftest.py (3 fixtures)
    ├── auto_cleanup (unused)
    ├── temp_dir (unused)
    └── temp_file (unused)
